--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,17 +8,16 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HomeActivity">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        <activity android:name=".MainActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
-        <activity android:name=".HostingActivity" />
-        <activity android:name=".CityListActivity" />
-        <activity android:name=".DetailActivity" />
-        <activity android:name=".ImageActivity"></activity>
+        <activity android:name=".HomeActivity" />
+        <activity android:name=".JoinActivity" />
+        <activity android:name="com.abc.app.airbnbcityapp.MainActivity"></activity>
     </application>
 
 </manifest>
